--- a/index.html
+++ b/index.html
@@ -3,39 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Trabalho</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="aba2.css">
+		<link rel="stylesheet" type="text/css" href="reset.css">
 	</head>
+	<title>Povos Indígenas e a Proteção da Biodiversidade</title>
+		<link rel="stylesheet" type="text/css" href="aba2.css">
+	</head>
+
 	<body>
 		<header>
-			Trabalho
+			<nav>
+			<ul>
+				<img src="cocar01.jpg">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="aba2.html">Povos Indígenas e a Proteção da Biodiversidade</a></li>
+			</ul>
+			</nav>
 		</header>
-		<img id="Foto" src="foto area.jpg">
-		<div id="texto">
-		<p> Area Indígena kaingang Palmas.PR/foto: Vitor Pasa Campos</p>
-		<h1>Povos Indígenas e a Proteção da Biodiversidade</h1>
-
-		<p>			Os povos Indígenas tem um papel fundamental na formação
-		da biodiversidade, com cerca de 13,8% do território brasileiro,
-	5% da população mundial, mas abrigam 80% da biodiversidade do planeta</p>
-
-		<p>			A preservação da biodiversidade é essencial para a segurança alimentar,
-			nutricional e medicinal, o acervo genético de plantas e espécies de animais
-			é encontrada em todos os biomas. Com uma vida sustentavel os povos Indígenas
-			 presenvam essas áreas ajudando na preservação e são parceiros diretos do
-			 fornecimento de soluções para as mudanças climaticas e na criação de um
-			 mundo mais sustentável, pois dependem da biodiversidade local e dos
-			serviços ecossistêmicos para seu sustento e bem estra.</p>
-
-			<p> 	Seus costumes, conhecímentos e práticas medicinais de sobrevivência em meio
-				a natureza são essenciais para a biodiversidade e sustentabilidade do planeta.
-			pois são guardiões das florestas.</p>
-
-			<p>		O mundo está voltado para a sustentabilidade e a biodiversidade do planeta, mas
-			esquencem de olhar para aqueles que a protegem.</p>
-			</div>
-
-<div id="fonte">
-			<p><strong>Referência:</strong> terrasindígenas.org.br/pt.br/faq/tis-e-meio-ambiente.</p>
-</div>
 	</body>
 </html>
