--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>Trabalho</title>
 		<link rel="stylesheet" href="aba2.css">
-		<link rel="stylesheet" type="text/css" href="reset.css">
-	</head>
+
+	
 	<title>Povos Indígenas e a Proteção da Biodiversidade</title>
 		<link rel="stylesheet" type="text/css" href="aba2.css">
 	</head>
@@ -16,9 +16,21 @@
 			<ul>
 				<img src="cocar01.jpg">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="aba2.html">Povos Indígenas e a Proteção da Biodiversidade</a></li>
+				<li><a>//</a></li>
+				<li><a href="aba2.html">Defesa da Biodiversidade</a></li>
+				<li><a>//</a></li>
+				<li><a href="aba3.html">Descriminação contra os povos Indígenas</a></li>
 			</ul>
 			</nav>
 		</header>
+			<h1>-------------------------------------------------------------//--------------------------------------------------------------</h1>
+			<h2> <=>\\ Nesta página você vera algumas coisas sobre os povos Indígenas //<=></h2>
+			<h3><strong>Defesa Da Biodiversidade</strong></h3>
+
+			<p>Nesta area você vera um pouco da relevância dos povos Indígenas na defesa da nossa Biodiversidade</p>
+
+			<h4><strong>Descriminação contra os Indíginas</strong></h4>
+
+			<p>Nesta area você vera sobre a descriminação contra os Indígenas e como isso pode estar incorreto</p>
 	</body>
 </html>
