--- a/aba2.html
+++ b/aba2.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 		<title>Trabalho</title>
 		<link rel="stylesheet" href="style.css">
+
 		
 	</head>
 	<body>
@@ -15,11 +16,15 @@
 		<ul>
 				<img src="cocar01.jpg">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="aba2.html">Povos Indígenas e a Proteção da Biodiversidade</a></li>
+				<li><a>//</a></li>
+				<li><a href="aba2.html">Defesa da Biodiversidade</a></li>
+				<li><a>//</a></li>
+				<li><a href="aba3.html">Descriminação contra os povos Indígenas</a></li>
 			</ul>
 		<img id="Foto" src="foto area.jpg">
 		<div id="texto">
 		<p> Area Indígena kaingang Palmas.PR/foto: Vitor Pasa Campos</p>
+		<h2>--------------------------------------------------------------------------------//-------------------------------------------------------------------------------------</h2>
 		<h1>Povos Indígenas e a Proteção da Biodiversidade</h1>
 
 		<p>			Os povos Indígenas tem um papel fundamental na formação
